# mg-engine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .lvimrc  .reformat_dir.sh  .ycm_extra_conf.py  CMakeLists.txt  LICENSE.txt  README.md  conanfile.txt
samples/: CMakeLists.txt  input.cpp  test_scene.cpp  test_scene.h
samples/data/materials/: billboard.hjson  block_scene.hjson  bloom.hjson  blur.hjson  default.hjson  particle.hjson  skybox.hjson
samples/data/meshes/: BarramundiFish.mgm  Fox.mgm  box.mgm  platform.dae  platform.glb  platform.mgm  sky_merged_mesh.mgm
samples/data/shaders/: blur.glsl  default_light_model.glsl  default_metallic_workflow.hjson  default_metallic_workflow_texture_array.hjson  default_specular_workflow.hjson  default_specular_workflow_texture_array.hjson  default_surface.glsl  get_material_values_metallic_workflow.glsl  get_material_values_specular_workflow.glsl  lotte_tonemap.glsl  post_process_bloom.hjson  post_process_blur.hjson  post_process_test.hjson  shader_stdlib.glsl  simple_billboard.hjson
samples/shared/: renderers.h
src/: CMakeLists.txt  README.md  mg_actor.cpp  mg_bounding_volumes.cpp  mg_imgui_overlay.cpp  mg_player_controller.cpp  mg_unicode.cpp
src/audio/: mg_audio_context.cpp  mg_sound_buffer_handle.cpp  mg_sound_source.cpp
src/containers/: README.md
src/core/: README.md  mg_application_context.cpp  mg_bounding_volumes.cpp  mg_config.cpp  mg_curve.cpp  mg_file_loader.cpp  mg_identifier.cpp  mg_imgui_overlay.cpp  mg_log.cpp  mg_player_controller.cpp  mg_resource_cache.cpp  mg_resource_entry.cpp  mg_resource_entry_base.cpp  mg_root.cpp  mg_rotation.cpp  mg_scene.cpp  mg_thread_pool.h  mg_unicode.cpp  mg_value.cpp  mg_window.cpp  mg_window_settings.cpp
src/core/audio/: mg_audio_context.cpp  mg_sound_buffer_handle.cpp  mg_sound_source.cpp
src/core/ecs/: mg_base_component.cpp  mg_entity.cpp
src/core/gfx/: mg_billboard_renderer.cpp  mg_bitmap_font.cpp  mg_blend_modes.cpp  mg_blur_render_target.cpp  mg_buffer_texture.cpp  mg_debug_renderer.cpp  mg_gfx_debug_group.cpp  mg_gfx_object_handles.cpp  mg_gl_debug.cpp  mg_gl_debug.h  mg_light_buffers.cpp  mg_light_buffers.h  mg_light_grid.cpp  mg_light_grid.h  mg_material.cpp  mg_material_pool.cpp  mg_matrix_uniform_handler.cpp  mg_mesh_buffer.cpp  mg_mesh_pool.cpp  mg_mesh_pool_impl.h  mg_mesh_renderer.cpp  mg_opengl_loader_glad.cpp  mg_pipeline.cpp  mg_pipeline_pool.cpp  mg_post_process.cpp  mg_render_command_list.cpp  mg_render_target.cpp  mg_shader.cpp  mg_shader.h  mg_skeleton.cpp  mg_skybox_renderer.cpp  mg_texture2d.cpp  mg_texture_common.cpp  mg_texture_cube.cpp  mg_texture_pool.cpp  mg_texture_related_types.cpp  mg_ui_renderer.cpp  mg_uniform_buffer.cpp
src/core/input/: mg_input.cpp  mg_keyboard.cpp  mg_mouse.cpp
src/core/parser/: mg_parser.cpp
src/core/physics/: mg_bullet_utils.h  mg_character_controller.cpp  mg_dynamic_body.h  mg_dynamic_body_handle.cpp  mg_ghost_object.h  mg_ghost_object_handle.cpp  mg_physics_body.h  mg_physics_body_handle.cpp  mg_physics_debug_renderer.cpp  mg_physics_debug_renderer.h  mg_physics_world.cpp  mg_shape_base.h  (+3 more)
src/ecs/: README.md  mg_base_component.cpp  mg_entity.cpp
src/editor/: mg_block_scene_editor.cpp  mg_curve_editor.cpp
src/gfx/: README.md  mg_billboard_renderer.cpp  mg_bitmap_font.cpp  mg_blend_modes.cpp  mg_blur_render_target.cpp  mg_blur_renderer.cpp  mg_buffer_texture.cpp  mg_debug_renderer.cpp  mg_font_handler.cpp  mg_gfx_debug_group.cpp  mg_gfx_object_handles.cpp  mg_gl_debug.cpp  mg_gl_debug.h  mg_gpu_mesh.h  mg_light_buffers.cpp  mg_light_buffers.h  mg_light_grid.cpp  mg_light_grid.h  mg_material.cpp  mg_material_pool.cpp  mg_material_repository.cpp  mg_matrix_ubo.cpp  mg_matrix_uniform_handler.cpp  mg_mesh.h  mg_mesh_buffer.cpp  mg_mesh_info.h  mg_mesh_internal.h  mg_mesh_pool.cpp  mg_mesh_pool_impl.h  mg_mesh_renderer.cpp  mg_opengl_loader_glad.h  mg_pipeline.cpp  mg_pipeline_pool.cpp  mg_post_process.cpp  mg_render_command_list.cpp  mg_render_target.cpp  mg_shader.cpp  mg_shader.h  mg_shader_factory.cpp  mg_shader_factory.h  (+12 more)
src/input/: mg_input.cpp  mg_joy.cpp  mg_keyboard.cpp  mg_mouse.cpp
src/memory/: mg_compacting_heap.cpp  mg_defragmenting_allocator.cpp
src/parser/: mg_lexer.cpp  mg_lexer.h  mg_parser.cpp  mg_parser_token.h  mg_shader_parser.cpp  mg_tokens.h
src/physics/: mg_bullet_utils.h  mg_character_controller.cpp  mg_dynamic_body.h  mg_dynamic_body_handle.cpp  mg_ghost_object.h  mg_ghost_object_handle.cpp  mg_physics.cpp  mg_physics_body.cpp  mg_physics_body.h  mg_physics_body_handle.cpp  mg_physics_debug_renderer.cpp  mg_physics_debug_renderer.h  mg_physics_world.cpp  mg_shape_base.h  mg_shape_types.h  mg_static_body.h  mg_static_body_handle.cpp
src/resource_cache/: mg_base_resource.cpp  mg_resource_cache.cpp
src/resources/: README.md  mg_base_resource.cpp  mg_font_resource.cpp  mg_material_resource.cpp  mg_mesh_resource.cpp  mg_raw_resource.cpp  mg_shader_resource.cpp  mg_sound_resource.cpp  mg_texture_resource.cpp
src/scene/: mg_block_scene.cpp  mg_scene.cpp
src/utils/: README.md  mg_file_io.cpp  mg_file_time_helper.cpp  mg_fopen_utf8.cpp  mg_geometric_functions.cpp  mg_rand.cpp  mg_string_utils.cpp  mg_text_file_io.cpp
tests/: .clang-tidy  CMakeLists.txt  add-test.sh  compacting_heap_test.cpp  config_test.cpp  defragmenting_allocator_test.cpp  entity_test.cpp  enum_map_test.cpp  file_io_test.cpp  format_string_test.cpp  gsl_test.cpp  observer_test.cpp  pipeline_pool_test.cpp  pooling_vector_test.cpp  resource_cache_test.cpp  slot_map_test.cpp  string_hash_test.cpp  thread_pool_test.cpp  unicode_test.cpp  utils_test.cpp
tests/data/: test-config.cfg
tools/: CMakeLists.txt  auto_mesh_converter.cpp  mg_assimp_utils.h  mg_file_data_range.h  mg_file_writer.h  mg_mesh_converter.cpp  mg_mesh_converter.h  mg_mesh_definitions.h
tools/curve_editor/: CMakeLists.txt  curve_editor_app.cpp
tools/mesh_converter/: CMakeLists.txt  auto_mesh_converter.cpp  mg_assimp_utils.h  mg_mesh_converter.cpp  mg_mesh_converter.h
tools/shared/: CMakeLists.txt  mg_file_writer.cpp  mg_file_writer.h
(+470 files in other folders)
